# TelegramMilestonePoster

./: .dockerignore  .replit  21.0  Dockerfile  README.md  auth.py  config.com  encode_session.py  extract_session_string.py  future-abacus-459611-p5-bced4330a3a3.json  generate_session.py  main.py  my_session  my_session.py  my_session.session  pyproject.toml  requirements.txt  session_b64.txt  session_name.session
attached_assets/: Pasted--Load-environment-variables-load-dotenv-API-ID-int-os-getenv-API-ID-API-HASH-1748434004934.txt
