[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "flask>=3.1.0",
    "google-auth>=2.40.1",
    "gspread>=6.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "telethon>=1.40.0",
]
